fix collapse

--- a/src/components/Collapse/collapse.css
+++ b/src/components/Collapse/collapse.css
@@ -1,4 +1,5 @@
 .collapse {
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   max-width: 1023px;
@@ -7,6 +8,8 @@
 
 .collapse-header {
   display: flex;
+
+  z-index: 1;
   justify-content: space-between;
   width: 100%;
   background-color: rgba(255, 96, 96, 1);
@@ -28,6 +31,18 @@
   font-size: 18px;
   text-align: left;
   border-radius: 5px;
+  animation: fadeIn 0.5s ease-out forwards;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(-45%);
+  }
+  100% {
+    height: auto;
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .collapse-arrow {
