--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -8,7 +8,7 @@
 .header-container {
   display: flex;
   justify-content: center;
-  margin: 50px;
+  padding: 50px;
 }
 
 .header-text {
@@ -39,7 +39,7 @@
     margin-right: 15px;
   }
   .header-container {
-    margin: 20px;
+    padding: 20px;
   }
   .header-text {
     font-size: 12px;
